--- a/src/mauno/App.css
+++ b/src/mauno/App.css
@@ -3,7 +3,7 @@
   width: 100vw;
   align-items: center;
   justify-content: center;
-  color: #E8E8E8;
+  color: #EBEFFF;
   background-color: #121212;
   height: 100vh;
 }
