--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   margin: 0 auto;
   text-align: center;
 }
+:root {
+  --primary-color: #EF5773;
+  --secondary-color: #4CAF50;
+}
 
 .container {
   display: flex;
@@ -19,4 +23,45 @@
   flex-basis: 60%;
   padding: 20px;
   box-sizing: border-box;
+}
+
+.image-section{
+  height: 50vh;
+  background-color: var(--bg-dark);
+  background-image: url(https://i.imgur.com/LQvRsRN.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative ;
+}
+
+
+a.btn {
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  &:hover {
+    background-color: var(--secondary-color);
+  }
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  border: none;
+  &:hover {
+    background-color: var(--secondary-color);
+  }
+}
+
+a {
+  color: var(--primary-color);
+  text-decoration: none;
+  &:hover {
+    color: var(--secondary-color);
+  }
 }
