--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   text-align: center;
 }
 :root {
-  --primary-color: #EF5773;
-  --secondary-color: #4CAF50;
+  --primary-color: #ef5773;
+  --secondary-color: #4caf50;
 }
 
 .container {
@@ -14,18 +14,18 @@
 }
 
 .side {
-  flex-basis: 20%;
+  flex-basis: 30%;
   padding: 20px;
   box-sizing: border-box;
 }
 
 .middle {
-  flex-basis: 60%;
+  flex-basis: 70%;
   padding: 20px;
   box-sizing: border-box;
 }
 
-.image-section{
+.image-section {
   height: 50vh;
   background-color: var(--bg-dark);
   background-image: url(https://i.imgur.com/LQvRsRN.png);
@@ -37,9 +37,8 @@
   justify-content: center;
   align-items: center;
 
-  position: relative ;
+  position: relative;
 }
-
 
 a.btn {
   background-color: var(--primary-color);
