--- a/src/mauno/App.css
+++ b/src/mauno/App.css
@@ -3,13 +3,15 @@
 
   align-items: center;
   justify-content: center;
-
 }
 
-.auth-form-container, .login-form, .register-form {
+.auth-form-container,
+.login-form,
+.register-form {
   display: flex;
   flex-direction: column;
-} 
+  width: 100%;
+}
 
 label {
   text-align: left;
@@ -21,13 +23,13 @@ input {
   padding: 1rem;
   border: none;
   border-radius: 10px;
-  background-color: #2C2C2E;
-  color: #E8E8E8;
+  background-color: #2c2c2e;
+  color: #e8e8e8;
 }
 
 button {
   border: none;
-  background-color: #007AFF;
+  background-color: #007aff;
   padding: 20px;
   border-radius: 10px;
   cursor: pointer;
@@ -36,28 +38,28 @@ button {
   margin-top: 12px;
 }
 
-.googleLogin{
+.googleLogin {
   background-color: #00d23c;
 }
 button:hover {
-  background-color: #005AD4;
+  background-color: #005ad4;
 }
 
 .link-btn {
   background: none;
-  color: #E8E8E8;
+  color: #e8e8e8;
   text-decoration: underline;
 }
 
 .custom-button {
   color: white;
   background-color: transparent;
-  border: none; 
-  outline: none; 
+  border: none;
+  outline: none;
   cursor: pointer;
-  transition: color 0.3s ease; 
+  transition: color 0.3s ease;
 }
 
 .custom-button:hover {
-  color: #ffffff; 
+  color: #ffffff;
 }
